--- a/index.html
+++ b/index.html
@@ -1,13 +1,143 @@
 <!DOCTYPE html>
+
+<link href="style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
 <html lang="en">
 <head>
     <title>Test - 9th May 2019</title>
-    <!-- 
-        Google fonts used:
-        - Source Sans Pro
-     -->
 </head>
-<body>
-    
+
+
+</head>
+<body style="alignment-adjust:central">
+
+<div class="topnav" id="myTopnav" style="">
+  <a style="float:left" href="#home">
+  <img width="50px" height="50px" src="images\food-panda-logo.png"/>
+  </a>
+  <a href="#news">Catergories</a>
+  <a href="#contact">My Cart</a>
+  <a href="#about">Request a Book</a>
+  <a href="#about">Contact Us</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+</div>
+
+
+
+
+<div style="width:auto; padding:26px">
+
+<div style="padding-left:16px;float:left; padding-right:16px">
+  <img class="image" src="images/book-item.jpg"/>  
+</div>
+<div style="position:relative;">
+<b>My Monster Fart</b><br/>
+by Kate Clary
+
+<br/>
+
+<div style="padding:10px">
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+</div>
+
+<hr/>
+
+<div style="">
+
+<b>Paperback Price</b> <del>$ 1</del> <br/>
+<div class="txt_color">$ 0.9</div>
+<form><button style="background-color:#F3C;color:#FFF;float:right width:20px; height:40px" class="fas fa-cart-plus" value="Add to Cart">Add to Cart
+</button></form>
+
+</div>
+<hr/>
+</div>
+
+
+<div style="padding:16px; position:relative">
+<hr/>
+
+<p>
+My Monster Farts 2,3,4 &5 is now also available as one book – 4 BOOKS FOR THE PRICE OF 3! 
+Check out 'My Monster Farts 2,3,4 &5' for more fun and farts with Zach and Lenny!
+
+
+Short chapter book ideal for kids age 4 up to 7. Good for beginner chapter readers.
+
+Zach has a pet monster called Lenny. No one else can see or hear him.
+He loves Lenny but there is one big problem. Lenny loves to fart!
+He farts at home and at school and everyone thinks that it’s Zach.
+Zach is tired of getting in trouble because of Lenny’s farting.
+What will Zach do?
+
+If you enjoy this book, you may also enjoy other books by Kate Clary, including THE MONSTER THAT STOLE MY UNDERWEAR and FARTICUS STINKAMUS.
+</p>
+
+
+</div><hr/>
+
+<div style="padding:16px">
+
+<h3>Product Details</h3>
+
+<b>Playback: </b>12<br/>
+<b>Publisher: </b>Amazon Digital Service<br/>
+<b>ISBN 10: </b>cadfew3efver4<br/>
+<b>Product Dimensions: </b>4x4x4<br/>
+<b>ShippingWeight: </b>9ounce<br/>
+<b>Average Customer Review: </b>
+
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+
+</div>
+
+
+<div style="padding:16px">
+
+<hr/>
+About the Author
+
+<div style="padding:20px; color:#666">
+Kate Clary has worked in an elementary school setting for most of her working life. An avid book reader since she was a young child, she has now authored fun, short chapter books for children between the ages of 4-9. 
+
+Kate is an animal lover and lives with her two rescue cats. She also enjoys traveling to places near and far. Curling up with a good book, with her cats by her side, is still one of her favorite past times.
+
+</div>
+
+
+
+<hr/>
+
+</div>
+
+
+
+
+
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
 </body>
 </html>
